MET-5643 collect(Collectors.toList()) replaced by toList() (~24 issues)