@@ -97,7 +97,7 @@ public class TaskFinishService {
     LOGGER.debug("Looking for tasks in {} state...", QUEUED);
     List<TaskByTaskState> tasks = tasksByStateDAO.findTasksByState(Collections.singletonList(QUEUED))
                                                  .stream().filter(task -> applicationId.equals(task.getApplicationId()))
-                                                 .collect(Collectors.toList());
+                                                 .toList();
     LOGGER.debug("Found tasks in {} state : {}", QUEUED, tasks);
     return tasks;
   }
